# AIxiaozhi

./: README.md
AIxiaozhi/: AIxiaozhi.code-workspace  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
AIxiaozhi/main/: CMakeLists.txt  idf_component.yml  main.c
AIxiaozhi/main/App/: App_audio.c  App_audio.h
AIxiaozhi/main/Com/: Com_Util.h  Com_status.c  Com_status.h
AIxiaozhi/main/Dri/: Dri_WIFI.c  Dri_WIFI.h  Dri_nvs.h  Dri_websocket.c  Dri_websocket.h
AIxiaozhi/main/Int/: Int_ES8311.c  Int_ES8311.h  Int_SR.c  Int_SR.h  Int_decoder.c  Int_encoder.h
SourceCode/AIxiaozhi/: partitions.csv  sdkconfig.old
SourceCode/AIxiaozhi/main/: CMakeLists.txt  idf_component.yml  main.c
SourceCode/AIxiaozhi/main/App/: App_audio.c  App_display.c  App_display.h
SourceCode/AIxiaozhi/main/Com/: Com_Util.c
SourceCode/AIxiaozhi/main/Dri/: Dri_http.c  Dri_http.h  Dri_nvs.c  Dri_websocket.c
SourceCode/AIxiaozhi/main/Int/: Int_ES8311.c  Int_ES8311.h  Int_decoder.h  Int_encoder.c  Int_lcd.c  Int_lcd.h
资料/MD资料/: 01.系统架构.md  02.硬件选型.md  03.相关知识介绍.md  04.工程搭建.md  05.ES8311.md  06.WiFi配网.md  07.SR音频识别模块.md  08.pcm-opus编码器解码器模块.md  09.汇总音频模块.md  10.nvs和工具函数.md  11.http请求.md  12.websocket.md  13.显示屏显示.md  14.灯光显示.md  15主程序App_main.md  AFE 声学前端算法框架 - ESP32-S3 - — ESP-SR latest 文档.html
资料/MD资料/AFE 声学前端算法框架 - ESP32-S3 - — ESP-SR latest 文档_files/: js
资料/官方资料/: 官方网址.md
